--- a/templates/index.html
+++ b/templates/index.html
@@ -121,7 +121,7 @@
 	<!-- Testimonials -->
 	<section class="testimonials text-center">
 		<div class="container-fluid">
-			<h4 class="my-4 title">Wafer Fault Detection</h4>
+			<h4 class="my-4 title">Wafer Fault Detection by Harshil</h4>
 			<br>
 			<a class="my-4 title" href="/train" style="padding:10px;border-radius:5px;background-color:Green;border:none;color:white"> Train Wafer Fault Detection</a>
 			<div class="row">
